poprawne gety oraz post dla edycji pytania