@@ -2,7 +2,9 @@ package com.example.mockolingo.service;
 
 import com.example.mockolingo.model.data.*;
 import com.example.mockolingo.model.data.question.ClosedChoicesQuestion;
+import com.example.mockolingo.model.data.question.Question;
 import com.example.mockolingo.model.data.question.QuestionAnswer;
+import com.example.mockolingo.model.data.question.QuestionFactory;
 import com.example.mockolingo.model.request.model.QuestionResult;
 import com.example.mockolingo.model.request.response.CourseDetailsEditResponse;
 import com.example.mockolingo.model.request.response.CourseDetailsResponse;
@@ -31,7 +33,7 @@ public class QuizService {
     private final QuizRepository quizRepository;
     private final QuizResultRepository quizResultRepository;
     private final UserService userService;
-
+    private final QuestionFactory questionFactory;
     public List<QuizModel> getQuizesNotDoneByUser() {
         User currentUser = userService.getCurrentUser();
         List<Quiz> quizes = quizRepository.findQuizesWithoutQuizResultForUser(currentUser.getId());
@@ -62,7 +64,7 @@ public class QuizService {
     }
 
     //TODO rewrite this
- /*   public CourseResultResponse submitQuiz(SubmitQuizRequest submitQuizRequest) {
+   public CourseResultResponse submitQuiz(SubmitQuizRequest submitQuizRequest) {
         Quiz quiz = quizRepository.findById(submitQuizRequest.getId()).orElseThrow();
         QuizResult quizResult = QuizResult.builder()
                 .quiz(quiz)
@@ -94,7 +96,7 @@ public class QuizService {
         quizResult.getQuestions().forEach(questionAnswer -> questionAnswer.setQuizResult(quizResult));
         return getQuizResult(quizResultRepository.save(quizResult));
     }
-*/
+
 
     //TODO rewrite this
     /*public CourseResultResponse getQuizResult(int id) {
@@ -117,10 +119,7 @@ public class QuizService {
                                 QuestionEditModel.builder()
                                         .id(closedChoicesQuestion.getID())
                                         .question(closedChoicesQuestion.getQuestion())
-                                    //    .a(closedChoicesQuestion.getA())
-                                      //  .b(closedChoicesQuestion.getB())
-                                        //.c(closedChoicesQuestion.getC())
-                                       // .correctAnswer(closedChoicesQuestion.getCorrectAnswer().toString())
+                                        .details(closedChoicesQuestion.toJsonRepresationEdit())
                                         .build()
 
                         ).toList()
@@ -164,36 +163,17 @@ public class QuizService {
         return quizes.stream().map(quiz -> QuizModel.builder().id(quiz.getID()).coursename(quiz.getQuizName()).build()).toList();
     }
 
-    //TODO rewrite this
     @Transactional
     public void submitQuiz(CourseSubmitRequest submitQuizRequest) {
         Quiz quiz = Quiz.builder()
                 .quizName(submitQuizRequest.getCoursename())
                 .questions(
                         submitQuizRequest.getQuestions().stream().map(
-                                submitQuizRequest ->
-                                {
-                                    Question.builder().question(submitQuestionRequest.getQuestion())
-                                }
-                        )
-
-                )
-                .closedChoicesQuestions(
-                        submitQuizRequest.getQuestions().stream().map(
-                                submitQuestionRequest ->
-                                    ClosedChoicesQuestion.builder()
-                                            .question(submitQuestionRequest.getQuestion())
-                                            .a(submitQuestionRequest.getA())
-                                            .b(submitQuestionRequest.getB())
-                                            .c(submitQuestionRequest.getC())
-                                            .correctAnswer(Answer.valueOf(submitQuestionRequest.getCorrectAnswer().toUpperCase()))
-                                            .build()
-                        ).toList()
-
+                                submitQuestionRequest  -> questionFactory.createQuestion(submitQuestionRequest)
+                        ).collect(Collectors.toList())
                 )
                 .build();
-        quiz.getClosedChoicesQuestions().forEach(closedChoicesQuestion -> closedChoicesQuestion.setQuiz(quiz));
-        quizRepository.save(quiz);
+        quiz.getQuestions().forEach(question -> question.setQuiz(quiz));
     }
 
     @Transactional
@@ -205,20 +185,10 @@ public class QuizService {
 
                 quiz.getQuestions().addAll(
                         submitQuizRequest.getQuestions().stream().map(
-                                submitQuestionRequest ->
-                                        ClosedChoicesQuestion.builder()
-                                             //   .question(submitQuestionRequest.getQuestion())
-                                                .a(submitQuestionRequest.getA())
-                                                .b(submitQuestionRequest.getB())
-                                                .c(submitQuestionRequest.getC())
-                                                .correctAnswer(Answer.valueOf(submitQuestionRequest.getCorrectAnswer().toUpperCase()))
-                                            //    .quiz(quiz)
-                                                .build()
-                        ).collect(Collectors.toCollection(ArrayList::new))
+                                submitQuestionRequest -> questionFactory.createQuestion(submitQuestionRequest)
+                        ).collect(Collectors.toList())
 
                 );
-
         quizRepository.save(quiz);
     }
-
 }
